# Delog

./: CMakeLists.txt  DeLog_benchmark.py  Delog_compress  Dockerfile  Dockerfile_decompress  P_C.py  Parsing_Results_Compress.py  README.md  Read_Parsing_Results.py  avg_length.py  benchmark.sh  benchmark_decompression.sh  comparison_log.csv  compressor.cpp  decompress  decompressor.cpp  diff_compare.py  digit_ratio.py  digit_token_ratio.py  entrypoint.sh  entrypoint_decompress.sh  general_compressor.py  general_compressor_benchmark.py  general_decompressor.py  line_and_size.py  logformatter.cpp  parse.py  parse_results.sh  peformance_benchmark.sh  ratio_read.py  requirements.txt  run_all.py  system_level_lzma.sh
Baselines/: benchmark.py  run_LogShrink.py  run_logreducer.py
Baselines/Denum/: Denum.cpp  Denum_decompress.cpp  benchmark.sh  compress_denum  compressor  decompress_denum  decompression_results.csv  decompressor  denum_baseline  peformance_benchmark.sh  system-level.sh
Baselines/LogReducer/: Elastic  Entropy  Iddiff  LogReducer.py  LogRestore.py  Makefile  Numdiff  THULR  benchmark_logreducer.py  constant.h  findrule.py  main.cpp  peformance_benchmark.sh  run_logreducer.py  training.py
Baselines/LogShrink/: LogShrink_benchmark.py  de_logShrink.py  run_LogShrink.py
Bytedance_getlog/: README.md
Compressor/: compression_tools.py
Correlation_analysis/: Kendall's Tau.py  Pearson.py  Spearman.py  Spearman_datasets.py  Spearman_graph.py  analysis.py
LogParsing/: evaluation_logic.py  main_evaluator.py
Log_Parsers/Drain/: Drain.py  Drain_bechmark_result.csv  (+1 more)
(+14 files in other folders)
